<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<!-- =========================================================================================================== -->
	<!-- Project information -->
	<groupId>tech.cassandre.trading.bot</groupId>
	<artifactId>cassandre-trading-bot-project</artifactId>
	<version>6.0.0</version>
	<packaging>pom</packaging>
	<name>Cassandre trading bot</name>
	<url>https://github.com/cassandre-tech/cassandre-trading-bot</url>
	<licenses>
		<license>
			<name>GNU General Public License v3.0</name>
			<url>https://github.com/cassandre-tech/cassandre-trading-bot/blob/development/LICENSE</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	<!-- =========================================================================================================== -->

	<!-- =========================================================================================================== -->
	<!-- Developers -->
	<developers>
		<developer>
			<id>straumat</id>
			<email>stephane.traumat@gmail.com</email>
			<name>Stéphane Traumat</name>
			<url>https://github.com/straumat</url>
		</developer>
	</developers>
	<!-- =========================================================================================================== -->

	<!-- =========================================================================================================== -->
	<!-- Source Code Management -->
	<scm>
		<url>https://github.com/cassandre-tech/cassandre-trading-bot</url>
		<connection>scm:git:git://github.com/cassandre-tech/cassandre-trading-bot.git</connection>
		<developerConnection>scm:git:git@github.com:cassandre-tech/cassandre-trading-bot.git</developerConnection>
	</scm>
	<!-- =========================================================================================================== -->

	<!-- =========================================================================================================== -->
	<!-- Issue management -->
	<issueManagement>
		<system>GitHub Issues</system>
		<url>https://github.com/cassandre-tech/cassandre-trading-bot/issues</url>
	</issueManagement>
	<!-- =========================================================================================================== -->

	<!-- =========================================================================================================== -->
	<!-- Spring boot -->
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.6.6</version>
		<relativePath/>
	</parent>
	<!-- =========================================================================================================== -->

	<!-- =========================================================================================================== -->
	<!-- Project configuration -->
	<properties>
		<!-- Java build configuration -->
		<java.version>17</java.version>
		<maven.compiler.target>17</maven.compiler.target>
		<maven.compiler.source>17</maven.compiler.source>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

		<!-- Libraries releases -->

		<!-- Core -->
		<spring.version>2.6.6</spring.version>
		<reactor.version>Dysprosium-SR25</reactor.version>
		<xchange.version>5.0.13</xchange.version>
		<bucket4j.version>7.4.0</bucket4j.version>
		<liquibase.version>4.9.1</liquibase.version>
		<opencsv.version>5.6</opencsv.version>

		<!-- Core utils -->
		<lombok.version>1.18.22</lombok.version>
		<lombok.mapstruct.version>0.2.0</lombok.mapstruct.version>
		<mapstruct.version>1.4.2.Final</mapstruct.version>
		<guava.version>31.1-jre</guava.version>

		<!-- Tests -->
		<junit-pioneer.version>1.7.0</junit-pioneer.version>
		<awaitility.version>4.2.0</awaitility.version>
		<hsqldb.version>2.6.1</hsqldb.version>
		<jackson.version>2.12.6</jackson.version>

		<!-- GraphQL API -->
		<graphql-dgs.version>4.9.25</graphql-dgs.version>

		<!-- Maven -->
		<maven.checkstyle.plugin.version>3.1.2</maven.checkstyle.plugin.version>
		<maven.graphqlcodegen.plugin.version>1.18</maven.graphqlcodegen.plugin.version>
		<maven.puppycrawl.checkstyle.version>10.2</maven.puppycrawl.checkstyle.version>
		<maven.resources.plugin.version>3.2.0</maven.resources.plugin.version>
		<maven.compiler.plugin.version>3.10.1</maven.compiler.plugin.version>
		<maven.surefire.plugin.version>2.22.2</maven.surefire.plugin.version>
		<maven.jacoco.plugin.version>0.8.8</maven.jacoco.plugin.version>
		<maven.failsafe.plugin.version>2.22.2</maven.failsafe.plugin.version>
		<maven.lombok.plugin.version>1.18.20.0</maven.lombok.plugin.version>
		<maven.source.plugin.version>3.2.1</maven.source.plugin.version>
		<maven.javadoc.plugin.version>3.4.0</maven.javadoc.plugin.version>
		<maven.jar.plugin.version>3.2.2</maven.jar.plugin.version>
		<maven.archetype-packaging.version>3.2.1</maven.archetype-packaging.version>
	</properties>
	<!-- =========================================================================================================== -->

	<!-- =========================================================================================================== -->
	<!-- Modules -->
	<modules>
		<!-- Trading bot spring boot starter -->
		<module>spring-boot-starter/autoconfigure</module>
		<module>spring-boot-starter/starter</module>
		<!-- Trading bot spring boot starter test -->
		<module>spring-boot-starter-test/autoconfigure</module>
		<module>spring-boot-starter-test/starter</module>
		<!-- Trading bot spring boot starter API -->
		<module>spring-boot-starter-api/spring-boot-starter-api-graphql/autoconfigure</module>
		<module>spring-boot-starter-api/spring-boot-starter-api-graphql/starter</module>
		<!-- Archetypes -->
		<module>trading-bot-archetypes/basic-archetype</module>
	</modules>
	<!-- =========================================================================================================== -->

	<!-- =========================================================================================================== -->
	<!-- Build configuration -->
	<build>
		<!-- Plugins -->
		<plugins>
			<!-- Release plugin -->
			<plugin>
				<groupId>com.amashchenko.maven.plugin</groupId>
				<artifactId>gitflow-maven-plugin</artifactId>
				<version>1.18.0</version>
				<configuration>
					<gitFlowConfig>
						<developmentBranch>development</developmentBranch>
					</gitFlowConfig>
					<commitMessages>
						<featureStartMessage>Update versions for feature branch</featureStartMessage>
						<featureFinishMessage>Update versions for development branch</featureFinishMessage>
						<hotfixStartMessage>Update versions for hotfix</hotfixStartMessage>
						<hotfixFinishMessage>Update for next development version</hotfixFinishMessage>
						<releaseStartMessage>Update versions for release</releaseStartMessage>
						<releaseFinishMessage>Update for next development version</releaseFinishMessage>
						<tagHotfixMessage>Tag hotfix</tagHotfixMessage>
						<tagReleaseMessage>Tag release</tagReleaseMessage>
					</commitMessages>
				</configuration>
			</plugin>
			<!-- Deploy to sonartype -->
			<plugin>
				<groupId>org.sonatype.plugins</groupId>
				<artifactId>nexus-staging-maven-plugin</artifactId>
				<version>1.6.13</version>
				<extensions>true</extensions>
				<configuration>
					<serverId>ossrh</serverId>
					<nexusUrl>https://oss.sonatype.org/</nexusUrl>
					<autoReleaseAfterClose>true</autoReleaseAfterClose>
				</configuration>
			</plugin>
			<!-- GPG signing -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-gpg-plugin</artifactId>
				<version>3.0.1</version>
				<executions>
					<execution>
						<id>sign-artifacts</id>
						<phase>verify</phase>
						<goals>
							<goal>sign</goal>
						</goals>
						<configuration>
							<!-- Prevent `gpg` from using pinentry programs -->
							<gpgArguments>
								<arg>--pinentry-mode</arg>
								<arg>loopback</arg>
							</gpgArguments>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	<!-- =========================================================================================================== -->

	<!-- =========================================================================================================== -->
	<!-- Distribution management -->
	<distributionManagement>
		<snapshotRepository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
	</distributionManagement>
	<!-- =========================================================================================================== -->

</project>
